Fix: Fully Dark Mode - Addons.org complete

--- a/userContent.css
+++ b/userContent.css
@@ -280,12 +280,15 @@
     @-moz-document url-prefix("https://addons.mozilla.org") {
       /* Basic */
       .Page-content,
-      .SecondaryHero {
+      .SecondaryHero,
+      main[aria-label="Content"] {
         color: var(--in-content-page-color) !important;
         background: var(--in-content-page-background) !important;
       }
 
       /* Text */
+      .AutoSearchInput-query,
+      .AutoSearchInput-suggestions-list,
       .Page-content h1,
       .Page-content h2,
       .SearchResult-link,
@@ -293,9 +296,12 @@
       .Home-SubjectShelf-link:visited,
       .DropdownMenuItem-link a,
       .Select,
-      .Button--neutral {
-        color: var(--in-content-text-color)!important
+      .Button--neutral,
+      .blog-entry-title,
+      .blogpost-nav * {
+        color: var(--in-content-text-color)!important;
       }
+      .AutoSearchInput-suggestions-item:is(:active, :focus, :hover),
       .SecondaryHero-message-link,
       .SecondaryHero-module-link,
       .Card-footer-link a,
@@ -313,7 +319,15 @@
       .PermissionsCard-learn-more,
       .DefinitionList a,
       .ShowMoreCard-contents a,
-      .AddonDescription-contents a {
+      .AddonDescription-contents a,
+      .AddonTitle a,
+      .TooltipMenu-opener,
+      .LanguageTools .Card-contents a,
+      .blog-entry-read-more-link,
+      .blogpost-nav-next.blogpost-nav-no-prev:hover p,
+      .blogpost-content-wrapper p a,
+      .blogpost-nav-prev:hover p,
+      .blogpost-nav-next:hover p {
         color: var(--in-content-link-color) !important;
       }
       .SearchResult--meta-section,
@@ -328,7 +342,13 @@
       .PermissionsCard-subhead--required,
       .Definition-dt,
       .RatingsByStar-count a,
-      .RatingsByStar-star a {
+      .RatingsByStar-star a,
+      .AddonSummaryCard-addonAverage,
+      .AddonReviewCard-authorByLine,
+      .Home-heroHeader-subtitle,
+      .blog-entry-date,
+      .blogpost-breadcrumb *,
+      .AddonTitle-author {
         color: var(--in-content-deemphasized-text) !important;
       }
       .PromotedBadge-label--recommended {
@@ -355,6 +375,8 @@
       .ShowMoreCard-contents::after {
         background: linear-gradient(hsla(0,0%,100%,0), var(--in-content-table-background)) !important;
       }
+      .AutoSearchInput-query,
+      .AutoSearchInput-suggestions-list,
       .SecondaryHero-module,
       .Card-header,
       .Card-contents,
@@ -365,14 +387,30 @@
       .DropdownMenu-items::after,
       .MetadataCard,
       .AddonsCard-list,
-      .Card-footer {
+      .Card-footer,
+      .StaticAddonCard,
+      .blogpost-nav * {
         background: var(--in-content-table-background) !important;
       }
 
+      .LanguageTools-header-row {
+        color: var(--in-content-table-header-color) !important;
+        background: var(--in-content-table-header-background) !important;
+      }
+      .LanguageTools-table.responsiveTable tbody tr:nth-child(2n) {
+        background-color: var(--in-content-box-background-odd) !important;;
+      }
+
       /* Fill */
+      .Icon-arrow-blue.SearchSuggestion-icon-arrow {
+        filter: hue-rotate(330deg) brightness(1.3)  !important;
+      }
       .SecondaryHero-module-icon {
         -moz-context-properties: fill, fill-opacity !important;
         fill: currentColor !important;
+      }
+      .Icon-magnifying-glass {
+        filter: invert(65%) !important;
       }
       .Icon-heart {
         filter:  brightness(0) !important;;
@@ -384,6 +422,22 @@
       /* Others */
       .DropdownMenu-items {
         box-shadow:  0 0 2px var(--in-content-border-color) !important;
+      }
+
+      .AutoSearchInput-query {
+        border: 1px solid var(--in-content-table-background) !important;
+      }
+      .AutoSearchInput-query:is(:hover, :focus) {
+        border-color: var(--in-content-primary-button-background) !important;
+      }
+
+      .blog-entry-read-more-link {
+        border-color: var(--in-content-link-color) !important;
+      }
+
+      .blogpost-nav-arrow-left  .cls-1,
+      .blogpost-nav-arrow-right .cls-1 {
+        stroke: var(--in-content-text-color)  !important;
       }
     }
   }
